--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
           <!-- Logo -->
           <tr>
             <td>
-              <table align="center" border="0" cellspacing="0" cellpadding="0" "presentation">
+              <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                 <tr>
                   <td style="padding: 19px 0 10px 0; text-align: center">
                     <a href="/" target="_blank">
-                      <img src="logo.png" alt="Mail logo" border="0" width="50" />
+                      <img src="https://i.ibb.co/jkkMZQ3/logo.png" alt="Mail logo" border="0" width="50" />
                     </a>
                   </td>
                 </tr>
@@ -184,6 +184,7 @@
           <tr>
             <td style="padding: 0px 24px 25px 24px">
               <table
+              align="center"
                 border="0"
                 cellspacing="0"
                 cellpadding="0"
@@ -211,9 +212,10 @@
                         font-size: 16px;
                         line-height: 25px;
                         color: #525f7f;
+                        text-align: center;
                       "
                     >
-                      Please update your plugin
+                      Lorem ipsum dolor sit amet
                     </p>
                   </td>
                 </tr>
@@ -227,6 +229,7 @@
                         font-size: 30px;
                         line-height: 1;
                         color: #1c1e23;
+                        text-align: center;
                       "
                     >
                       Lorem ipsum dolor sit amet
@@ -237,11 +240,11 @@
                 <tr>
                   <td style="padding: 0 0 25px 0">
                     <img
-                      src="food-3.jpg"
+                      src="https://i.ibb.co/FBHp2js/food-3.jpg"
                       alt="Hero image"
                       border="0"
                       width="552"
-                      style="max-width: 552px;"
+                      style="width:100%;max-width: 552px;"
                     />
                   </td>
                 </tr>
@@ -328,10 +331,10 @@
           <!-- Double columns heading -->
           <tr>
             <td style="padding: 0px 24px 25px 24px;">
-              <table border="0" cellspacing="0" cellpadding="0" role="presentation">
+              <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation">
                 <tr>
                   <td style="padding: 10px 0 25px 0; text-align: center">
-                    <h2 style="margin: 0;font-weight: 400;font-size: 30px;line-height: 36px;color: #1c1e23;">Second section with two columns</h2>
+                    <h2 style="margin: 0;font-weight: 400;font-size: 30px;line-height: 36px;color: #1c1e23;text-align: center;">Second section with two columns</h2>
                   </td>
                 </tr>
               </table>
@@ -352,7 +355,7 @@
                           <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: left;">
                               <tr>
                                 <td style="padding:0 0 9px 0;">
-                                  <img src="gallery-3.jpg" alt="First column image" border="0" width="260" style="max-width: 260px;" />
+                                  <img src="https://i.ibb.co/pjdZBsw/gallery-3.jpg" alt="First column image" border="0" width="260" style="max-width: 260px;" />
                                 </td>
                               </tr>
                               <tr>
@@ -417,7 +420,7 @@
                           <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: left;">
                               <tr>
                                 <td style="padding:0 0 9px 0;">
-                                  <img src="gallery-4.jpg" alt="Second column first image" border="0" width="260" style="max-width: 260px;" />
+                                  <img src="https://i.ibb.co/n75MQc1/gallery-4.jpg" alt="Second column first image" border="0" width="260" style="max-width: 260px;" />
                                 </td>
                               </tr>
                               <tr>
@@ -493,7 +496,7 @@
                           <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: left;">
                               <tr>
                                 <td style="padding:0 0 9px 0;">
-                                  <img src="gallery-5.jpg" alt="First column image" border="0" width="260" style="max-width: 260px;" />
+                                  <img src="https://i.ibb.co/D7tnTQt/gallery-5.jpg" alt="First column image" border="0" width="260" style="max-width: 260px;" />
                                 </td>
                               </tr>
                               <tr>
@@ -558,7 +561,7 @@
                           <table border="0" cellspacing="0" cellpadding="0" role="presentation" style="text-align: left;">
                               <tr>
                                 <td style="padding:0 0 9px 0;">
-                                  <img src="gallery-6.jpg" alt="Second column image" border="0" width="260" style="max-width: 260px;" />
+                                  <img src="https://i.ibb.co/D4c8qN1/gallery-6.jpg" alt="Second column image" border="0" width="260" style="max-width: 260px;" />
                                 </td>
                               </tr>
                               <tr>
@@ -626,7 +629,7 @@
           <!-- Footer -->
           <tr>
             <td style="padding: 0px 24px 25px 24px;">
-              <table align="center" border="0" cellspacing="0" cellpadding="0" "presentation">
+              <table align="center" border="0" cellspacing="0" cellpadding="0" role="presentation" style="width:100%;">
                 <tr>
                   <td>
                     <div
@@ -662,7 +665,7 @@
                                 <tr>
                                   <td>
                                     <a href="/" target="_blank">
-                                      <img src="fb.png" alt="facebook" border="0" width="18" style="max-width: 18px;" />
+                                      <img src="https://i.ibb.co/BTdMQBR/Telegram-logo.webp" alt="telegram" border="0" width="18" style="max-width: 18px;" />
                                     </a>
                                   </td>
                                 </tr>
@@ -681,7 +684,7 @@
                                 <tr>
                                   <td>
                                     <a href="/" target="_blank">
-                                      <img src="vk.png" alt="vkontakte" border="0" width="18" style="max-width: 18px;" />
+                                      <img src="https://i.ibb.co/BTdMQBR/Telegram-logo.webp" alt="telegram" border="0" width="18" style="max-width: 18px;" />
                                     </a>
                                   </td>
                                 </tr>
@@ -700,7 +703,7 @@
                                 <tr>
                                   <td>
                                     <a href="/" target="_blank">
-                                      <img src="Telegram_logo.png" alt="telegram" border="0" width="18" style="max-width: 18px;" />
+                                      <img src="https://i.ibb.co/BTdMQBR/Telegram-logo.webp" alt="telegram" border="0" width="18" style="max-width: 18px;" />
                                     </a>
                                   </td>
                                 </tr>
