--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE-edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta name="color-scheme" content="light dark" />
-    <meta name="supported-color-schemes" content="light dark" /> -->
+    <meta name="color-scheme" content="light dark" />
+    <meta name="supported-color-schemes" content="light dark" />
     <title>Title</title>
     <style type="text/css">
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
@@ -62,7 +62,7 @@
           max-width: 100% !important;
         }
       }
-      /* 
+      
       :root {
         color-scheme: light dark;
         supported-color-schemes: light dark;
@@ -74,11 +74,12 @@
           background-color: #06080b !important;
         }
         h1,
-        h2,
+        h2, 
+        h3,
         p {
           color: #ffffff !important;
         }
-      } */
+      }
     </style>
 
     <!-- Only outlook -->
